# psfbench

./: .gitignore  README.md  pyproject.toml
dev_notes/: maintenance_backlog.md
docs/: pipeline-subcommands.md  review_action_plan.md
src/psfbench/: __init__.py  cli.py  coordinates.py  detection.py  gui.py  io.py  measurement.py  metadata.py  plotting.py  roi.py  summary.py
tests/: test_cli.py  test_detection.py  test_gui.py  test_io.py  test_measurement.py  test_metadata.py  test_plotting.py  test_roi.py  test_summary.py
